--- a/finalWebpage/threadsCSS.css
+++ b/finalWebpage/threadsCSS.css
@@ -85,8 +85,15 @@ header p{
 #bannerImage{
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+  
 
+}
+
+.bannerImage{
+
+    display:flex;
+    flex-direction: row;
 }
 #mensCat,#womensCat{
 
@@ -98,6 +105,13 @@ header p{
     display:flex;
     flex-direction: row;
     justify-content: space-evenly;
+    font-size: 2em;
+    
+}
+
+.womensPics{
+
+ margin-bottom: 4em;
 }
 
 .mensPics img,.womensPics img{
@@ -112,13 +126,20 @@ header p{
 /*mens page body*/
 .inventory{
     display:flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
     margin-right: 3em;
     margin-left: 3em;
 
 }
+.item,.item1,.item2,.item3,.item4,.item5,.item6,.item7,.item8{
 
+    margin: 1em;
+     border:2px solid black;
+    border-radius: 10px;
+    padding: 5px;
+}
 #mensPageTitle{
 
 margin-left: 1em;
@@ -134,14 +155,8 @@ font-size: 2em;
     font-size: 1em;
 }
 
-.item,.item1,.item2{
-    border:2px solid black;
-    border-radius: 10px;
-    padding: 5px;
-   
-}
 
-.item img,.item1 img,.item2 img{
+.item img,.item1 img,.item2 img,.item3 img,.item4 img,.item5 img,.item6 img,.item7 img,.item8 img{
 width: 400px;
 height: 400px;
 }
@@ -224,7 +239,7 @@ footer{
     justify-content: space-evenly;
     background-color: black;
     color:white;
-    padding-bottom: 2em;
+    padding-bottom: 9em;
     margin-top: 2em;
     margin-bottom: -8px;
     margin-left:-8px ;
