--- a/finalWebpage/threadsCSS.css
+++ b/finalWebpage/threadsCSS.css
@@ -245,3 +245,17 @@ footer{
     margin-left:-8px ;
     margin-right: -8px;
 }
+
+
+
+/* display item css*/
+.bottomItems{
+
+    display: initial;
+}
+
+.displayItem{
+
+display: none;
+}
+
