--- a/finalWebpage/threadsCSS.css
+++ b/finalWebpage/threadsCSS.css
@@ -51,17 +51,109 @@ body{
 
     text-decoration: underline;
 }
+/*
 .navBar a:hover{
     color:black;
     background-color:white;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
 }
+*/
 #mensLink,#womensLink{
   color:black;
     font-size: 3em;
     -webkit-text-stroke: 1px black;
 }
+
+#mensLink:hover,#womensLink:hover{
+    color:black;
+    background-color:white;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+  }
+
+
+
+
+
+  
+  /* The container <div> - needed to position the dropdown content */
+  .mensDropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .mensDDContent {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .mensDDContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+
+  }
+  
+  /* Change color of dropdown links on hover */
+  .mensDDContent a:hover {
+      
+    color:white;
+    background-color:black;
+
+}
+  
+  /* Show the dropdown menu on hover */
+  .mensDropdown:hover .mensDDContent {display: block;}
+  
+  .womensDropdown {
+    position: relative;
+    display: inline-block;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .womensDDContent {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .womensDDContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+
+  }
+  
+  /* Change color of dropdown links on hover */
+  .womensDDContent a:hover {
+      
+      color:white;
+    background-color:black;
+ 
+
+}
+  
+  /* Show the dropdown menu on hover */
+  .womensDropdown:hover .womensDDContent {display: block;}
+
+
 
 #websiteTitle{
   
@@ -131,7 +223,7 @@ header p{
     justify-content: space-evenly;
     margin-right: 3em;
     margin-left: 3em;
-    display: initial;
+
 
 }
 .item,.item1,.item2,.item3,.item4,.item5,.item6,.item7,.item8{
@@ -222,10 +314,7 @@ margin-bottom: 0em;
 margin-top: 0em;
     font-size: 3em;
 }
-.itemInfo button{
 
-
-}
 
 .Description{
 
@@ -247,6 +336,18 @@ footer{
     margin-right: -8px;
 }
 
+.row3 img{
+width:80px;
+height:40px;
+padding:2px;
+}
+
+.row3{
+display:flex;
+flex-direction: column;
+
+}
+
 
 
 /* display item css*/
@@ -260,3 +361,16 @@ footer{
 display: none;
 }
 
+.leftButton,.rightButton{
+    background-color:white;
+    border: none;
+    font-size: 2em;
+    box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.2);
+   
+}
+
+.leftButton:hover,.rightButton:hover{
+    color:white;
+    background-color: black;
+    
+}
